@@ -1,6 +1,13 @@
 2007-05-01  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-main.c: (main):
+	* appearance-ui.c: (ui_init):
+	* appearance-ui.h:
+	* appearance.h: we don't need to unref the GConfPropertyEditors
+
+2007-05-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-main.c: (main):
 	* appearance-ui.c:
 	* appearance-ui.h:
 	* appearance.h:
